--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=admin
+
+#HMAC hashing secret for passwords 
+secret=secret
