--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -12,4 +12,4 @@ spring.security.user.password=admin
 spring.security.user.roles=admin
 
 #HMAC hashing secret for passwords 
-secret=secret
+HMAC.secret=secret
