--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-MYSQL_FORWARD_DB_PORT=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=gim
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_ROOT_PASSWORD=root
+MYSQL_LOCAL_PORT=3306
+MYSQL_DOCKER_PORT=3306
+
+MAIL_HOST=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_PORT=
