--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,53 @@ version: "3.9"
 services:
   mysql:
     image: 'mysql/mysql-server:8.0'
-    container_name: gim-backend-mysql
+    restart: unless-stopped
+    env_file: .env
     ports:
-      - '${MYSQL_FORWARD_DB_PORT}:3306'
+      - '${MYSQL_DOCKER_PORT}:3306'
     environment:
-      MYSQL_ROOT_HOST: "%"
       MYSQL_DATABASE: '${MYSQL_DATABASE}'
+      MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
       MYSQL_USER: '${MYSQL_USER}'
       MYSQL_PASSWORD: '${MYSQL_PASSWORD}'
-      MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
-      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+
     volumes:
       - 'mysql:/var/lib/mysql'
+
+  app:
+    depends_on:
+      - mysql
+    build: .
+    restart: on-failure
+    env_file: .env
+    ports:
+      - "8081:8080"
+    environment:
+      SPRING_APPLICATION_JSON: '{
+          "spring.datasource.url"  : "jdbc:mysql://mysql:$MYSQL_DOCKER_PORT/$MYSQL_DATABASE?useSSL=false&allowPublicKeyRetrieval=true",
+          "spring.datasource.username" : "$MYSQL_USER",
+          "spring.datasource.password" : "$MYSQL_ROOT_PASSWORD",
+          "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+          "spring.jpa.hibernate.ddl-auto" : "update",
+          "spring.mail.host": "$MAIL_HOST",
+          "spring.mail.username": "$MAIL_USERNAME",
+          "spring.mail.password": "$MAIL_PASSWORD",
+          "spring.mail.port": "$MAIL_PORT",
+          "application.frontend.url": "localhost:4000",
+          "server.contextPath": "/api/*",
+          "application.jwt.secret": "secret",
+          "application.jwt.token.prefix": "Bearer",
+          "application.jwt.token.expiration": 14,
+          "application.admin.email": "admin@gmail.com",
+          "application.admin.password": "password",
+          "application.admin.dni": "40100200",
+          "application.admin.name": "Admin"
+        }'
+    volumes:
+      - .m2:/root/.m2
+    stdin_open: true
+    tty: true
+
 volumes:
   mysql:
     driver: local
